--- a/css/styles.css
+++ b/css/styles.css
@@ -629,6 +629,13 @@ img {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background: var(--additional-background-color-2);
+    outline: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-mail input:focus {
+    border-color: var(--accent-color);
+    color: var(--additional-text-color-2);
 }
 
 
@@ -658,6 +665,7 @@ img {
 
 }
 
+
 .footer-btn-text {
 
     margin-right: 10px;
@@ -683,8 +691,10 @@ img {
     top: 50%;
     right: 28px;
     transform: translateY(-50%);
-
 }
+
+
+
 
 /* modal */
 
@@ -849,16 +859,17 @@ textarea {
 .checkbox {
     display: flex;
     margin-right: 7px;
-    width: 16px;
+    width: 15px;
     height: 15px;
     border: 2px solid var(--primery-text-color);
-    border-radius: 4px;
+    border-radius: 3px;
 
     background-origin: border-box;
     justify-content: center;
+    background-size: contain;
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    /* border 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 
 }
 
@@ -866,7 +877,6 @@ textarea {
 .modal-accept input:checked+label .checkbox {
     background-color: var(--accent-color);
     border: none;
-    background-size: contain;
 
 }
 
