--- a/css/styles.css
+++ b/css/styles.css
@@ -628,6 +628,7 @@ img {
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
+    color: var(--additional-text-color-2);
     background: var(--additional-background-color-2);
     outline: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
